--- a/public/form.html
+++ b/public/form.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <form action="/addName" method="post"> 
-     <input type="text" required name="name" placeholder="please type your name" id="name"><br><br> 
-     <input type="number" name="age" placeholder="please type your age" id="age"><br><br> 
+     <input type="text" required name="usName" placeholder="please type your name" id="name"><br><br> 
+     <input type="email" name="usEmail" placeholder="please type your email" id="email"><br><br> 
+	 <input type="password" name="usPassword" placeholder="please type your password" id="password"><br><br> 
      <input type="submit" id="inputSub" onclick="sendData()"> 
     </form> 
     <img src="img/download.jpeg" alt="">  
